# local-dev-sentinel

./: README.md  __init__.py  config_validator.py  dependency_checker.py  environment_scanner.py  exporter.py  fix_suggester.py  history_logger.py  pyproject.toml  report_generator.py  requirements.txt
tests/: test_config_validator.py  test_dependency_checker.py  test_environment_scanner.py  test_exporter.py  test_fix_suggester.py  test_history_logger.py  test_report_generator.py
